# Rope-Simulation

./: CMakeLists.txt
include/: point.hpp  stick.hpp
src/: main.cpp  point.cpp  stick.cpp
